# ziga-pomodoro

./: .gitignore  CMakeLists.txt  LICENSE.txt  ReadMe.md  merge_files.py  setup.sh
resources/: resources.qrc
resources/styles/: dark.qss  default.qss
src/: databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  pomodoroactivitymap.cpp  pomodoroactivitymap.h  settings.cpp  settings.h  timer.cpp  timer.h  timerwindow.cpp  timerwindow.h
